--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^10.14.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-web": "^0.20.0",
+    "react-native-worklets": "^0.5.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
   "private": true
