--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "~53.0.22",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-notifications": "~0.31.4",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
@@ -25,11 +26,13 @@
     "react-native-web": "^0.20.0",
     "react-native-worklets": "^0.5.0",
     "tailwindcss": "^3.4.17",
-    "expo-linear-gradient": "~14.1.5"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
