--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,28 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": [
+      "ES2020"
+    ],
+    "jsx": "react-jsx",
+    "moduleResolution": "Bundler",
     "strict": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
       ]
-    },
-    "skipLibCheck": true
+    }
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
+    "app",
+    "components",
+    "context",
+    "services",
+    "types",
+    "global.css",
     "nativewind-env.d.ts"
   ]
 }
