--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
   "name": "petcareplus",
   "version": "1.0.0",
+  "private": true,
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "expo": "~53.0.22",
+    "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-notifications": "~0.31.4",
-    "expo-router": "^5.1.4",
+    "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^10.14.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-web": "^0.20.0",
-    "react-native-worklets": "^0.5.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3"
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.9",
-    "@types/react-native": "^0.72.8",
+    "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "^11.0.14",
     "typescript": "~5.8.3"
-  },
-  "private": true
+  }
 }
