--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@reduxjs/toolkit": "^2.9.0",
     "expo": "~53.0.22",
     "expo-file-system": "~18.1.11",
@@ -21,11 +22,12 @@
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^10.14.1",
+    "firebase": "^12.2.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-web": "^0.20.0",
@@ -39,6 +41,12 @@
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^11.0.14",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
+  },
+    "resolutions": {
+    "@react-native-async-storage/async-storage": "2.1.2"
   }
+
 }
