--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@reduxjs/toolkit": "^2.9.0",
     "expo": "~53.0.22",
     "expo-file-system": "~18.1.11",
@@ -45,8 +45,7 @@
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
-    "resolutions": {
+  "resolutions": {
     "@react-native-async-storage/async-storage": "2.1.2"
   }
-
 }
