--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "types": ["./firebase.d.ts", "react", "react-native"],
     "strict": true,
-    "baseUrl": ".",
-    "target": "ES2020",
-    "lib": [
-      "ES2020"
-    ],
-    "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "paths": {
       "@/*": [
@@ -18,14 +11,8 @@
     }
   },
   "include": [
-    "app",
-    "components",
-    "context",
-    "services",
-    "types",
-    "global.css",
-    "nativewind-env.d.ts",
-    "firebase.d.ts",
-    "lib/firebase.ts", 
-    "lib/storage.ts"  ]
+    "**/*.ts",
+    "**/*.tsx",
+    "firebase.d.ts"
+  ]
 }
