--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@expo/metro-runtime": "~3.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.2.6",
-    "expo": "~51.0.21",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "expo": "53.0.0",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.4.0",
+    "firebase": "^12.2.1",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +34,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
@@ -41,6 +44,9 @@
     "babel-preset-expo": "~11.0.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~7.0.0",
+    "metro": "^0.80.12",
+    "metro-config": "^0.80.12",
+    "metro-resolver": "^0.80.12",
     "typescript": "~5.3.3"
   },
   "resolutions": {
