--- a/package.json
+++ b/package.json
@@ -1,55 +1,55 @@
 {
   "name": "petcareplus",
-  "version": "1.0.0",
-  "private": true,
   "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "typecheck": "tsc --noEmit",
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@reduxjs/toolkit": "^2.2.6",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
-    "expo": "53.0.0",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-notifications": "~0.28.10",
-    "expo-router": "~3.5.17",
-    "expo-status-bar": "~1.12.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.6",
+    "expo": "~53.0.22",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.4.0",
+    "expo-image-picker": "^16.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.5",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.11",
+    "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
-    "nativewind": "^4.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "stream-browserify": "^3.0.0",
-    "tailwindcss": "^3.4.4"
+    "nativewind": "^4.1.23",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "13.13.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-preset-expo": "~11.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~7.0.0",
-    "metro": "^0.80.12",
-    "metro-config": "^0.80.12",
-    "metro-resolver": "^0.80.12",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   },
-  "resolutions": {
-    "@react-native-async-storage/async-storage": "^1.23.1"
-  }
+  "private": true
 }
