--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,16 @@
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true, 
+    "skipLibCheck": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
     "firebase.d.ts"
   ]
 }
