--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
-    "expo-notifications": "~0.31.4",
+    "expo-notifications": "^0.32.11",
     "expo-router": "~5.1.5",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
@@ -46,6 +46,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
