--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
+    "jszip": "^3.10.1",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -51,7 +52,8 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
